- Added append_orig_dest parameter as input to append origin and destination points to the LineString
- Updated README.md

1.0.9 (04/01/2023)
------------------
- Improved network connectivity
- Added restrictions parameter as input to control restrictiveness of connections due to different reasons
- Updated README.md

1.1.0 (23/05/2023)
------------------
- Improved network connectivity
- Added new feature : closest port of load and port of discharge
- Updated README.md

1.2.0 (24/08/2023)
------------------
- 35x Faster: Significantly accelerated compared to v1.1 by rethinking and reorganizing the code.
- Re-think Class Design: Re-structured and simplified class structure.
- Easy API Access
- Improved Network Connectivity: Enhanced network reliability.
- Updated README.md: Revised for the latest information.

1.2.1 (28/08/2023)
------------------
- Patch fixed issue when querying country with no port result

1.2.2 (08/09/2023)
------------------
- Patch fixed and simplified coords line normalization

1.2.3 (05/01/2024)
------------------
- Patch fixed and improved coords validation

1.3.0 (11/01/2024)
------------------
- Added in port_params additional parameter country_restricted
- Updated license to Apache 2.0

1.3.1 (27/01/2024)
------------------
- Enriched network with additional passages


1.4.0 (09/06/2024)
------------------
- Enriched network with additional passages : chili and south_africa (#27)
- Adjusted logic of port selection (#28)
- Add feature to suggest preferred port of load and port of discharge (#29)
- Fixed del property `to_cty` in main function (#30)
- Created unit tests
- return passages traversed by the path (#34)

1.4.1 (22/06/2024)
------------------
- Fixed support python 3.7 3.8 (issue #36)
- Fixed bug in `return_passages` (issue #35)
- Added tests for `return_passages`

1.4.2 (22/08/2024)
------------------
- Improved Marnet around Baltic sea #37
- Fixed issue with returned passage when crossing the ocean 